--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ label[for='new-task'] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type='text'] {
+input[type="text"] {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,12 +82,12 @@ input[type='text'] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type='text']:focus {
+input[type="text"]:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+label[for="new-task"] {
   display: block;
   margin: 0 0 20px;
 }
@@ -108,7 +108,7 @@ li > * {
   vertical-align: middle;
 }
 
-li > input[type='checkbox'] {
+li > input[type="checkbox"] {
   margin: 0 10px;
 }
 li > label {
@@ -140,7 +140,7 @@ ul li input[type='text'] {
   display: none;
 }
 
-ul li.editMode input[type='text'] {
+ul li.editMode input[type="text"] {
   display: inline-block;
   width: 224px;
 }
