--- a/style.css
+++ b/style.css
@@ -4,50 +4,51 @@ body {
   color: #333;
   font-family: Lato, sans-serif;
 }
-.aaa {
+.header {
   width: 500px;
   margin: 0 auto;
   display: block;
   text-align: right;
 }
-.aaa img {
+.header__img {
   width: 100%;
 }
-.aaa .more-inf {
+.header__link {
   font-family: fantasy, cursive;
 }
 
 @media (max-width: 768px) {
-  .aaa {
+
+  .header {
     text-align: center;
   }
+
 }
-.centered-main-page-element {
+.main {
   display: block;
   width: 500px;
   margin: 0 auto 0;
 }
-.task {
+.task,
+.label {
   width: 56%;
   display: inline-block;
   flex-grow: 1;
 }
-.task-row-wrapper {
+.section__wrapper {
   display: flex;
 }
-ul {
+.list {
   margin: 0;
   padding: 0px;
-}
-li,
-h2 {
   list-style: none;
 }
-input,
-button {
+.task,
+.checkbox,
+.btn {
   outline: none;
 }
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -56,12 +57,11 @@ button {
   font-family: Lato, sans-serif;
   cursor: pointer;
 }
-button:hover {
+.btn:hover {
   color: #3a3a3a;
 }
 /* Heading */
-h2,
-label[for='new-task'] {
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -70,7 +70,7 @@ label[for='new-task'] {
   margin: 0;
   text-transform: uppercase;
 }
-input[type='text'] {
+.task {
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -82,21 +82,22 @@ input[type='text'] {
   font-family: Lato, sans-serif;
   color: #888;
 }
-input[type='text']:focus {
+.task:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.section__add_title {
   display: block;
   margin: 0 0 20px;
 }
-input#new-task {
+
+#new-task {
   width: 318px;
 }
 
 /* Task list */
-li {
+.item {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -104,47 +105,49 @@ li {
   justify-content: space-between;
   align-items: center;
 }
-li > * {
+.item > * {
   vertical-align: middle;
 }
 
-li > input[type='checkbox'] {
+.checkbox {
   margin: 0 10px;
 }
-li > label {
+.label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
-li > input[type='text'] {
+.item .task{
   width: 226px;
 }
-button.delete img {
+.img {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
-button.delete img:hover {
+.img:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+/* item_completed-label */
+#completed .label{
   text-decoration: line-through;
   color: #888;
 }
 
 /* Edit Task */
-ul li input[type='text'] {
+
+.item .task{
   display: none;
 }
 
-ul li.edit-mode input[type='text'] {
+.section__item_edit .task {
   display: inline-block;
   width: 224px;
 }
 
-ul li.edit-mode label {
+.section__item_edit .label {
   display: none;
 }
